# hero-dock

./: CMakeLists.txt  README.md  herodock.desktop  install.sh
src/: AppMenu.cpp  AppMenu.h  DeviceManager.cpp  DeviceManager.h  DockConfig.h  DockDeviceItem.cpp  DockDeviceItem.h  DockItem.cpp  DockItem.h  DockWindow.cpp  DockWindow.h  NetworkPanel.cpp  NetworkPanel.h  NotificationManager.cpp  NotificationManager.h  SettingsDialog.cpp  SystemPanel.cpp  SystemPanel.h
